<resources>
    <string name="app_name">Vague-Task1</string>
    <string name="app_actual_name">liketracker</string>
    <string name="action_settings">Settings</string>
    <string name="txt_email">E-mail</string>
    <string name="txt_password">Password</string>
    <string name="txt_name">Name</string>
    <string name="txt_confPassword">Confirm Password</string>
    <string name="txt_donthaveanaccount">Don\'t have an account yet?</string>
    <string name="btn_login">Login</string>
    <string name="btn_signup">Sign Up</string>

    <string name="user_email_pref_key">USER INFO PREF KEY</string>
    <string name="user_name_pref_key">USER NAME PREF KEY</string>
    <string name="user_password_pref_key">USER PASSWORD PREF KEY</string>
    <string name="user_logged_in">USER LOGGED IN</string>

    <string name="txt_logout">Logout</string>
    <string name="today">Today</string>
</resources>
